--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -149,7 +149,7 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-user text-primary mb-4"></i>
                             <h5>Travel Guides</h5>
-                            <p>Explore with confidence! Our travel guides provide insider insights and must-see recommendations</p>
+                            <p>Explore with confidence! Our travel guides provide insider insights and must-see recommendations.</p>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-cog text-primary mb-4"></i>
                             <h5>Event Management</h5>
-                            <p>From vision to reality! Let us handle the details of your event, ensuring an unforgettable experience</p>
+                            <p>From vision to reality! Let us handle the details of your event, ensuring an unforgettable experience.</p>
                         </div>
                     </div>
                 </div>
