--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -118,7 +118,7 @@
                     <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
                     <h1 class="mb-4">Welcome to <span class="text-primary">Tourist</span></h1>
                     <p class="mb-4">your premier destination for unforgettable journeys and immersive experiences in the enchanting land of Tunisia. At Tourist, we are passionate about crafting tailor-made adventures that showcase the rich tapestry of Tunisia's cultural heritage, stunning landscapes, and warm hospitality. With a team of dedicated travel enthusiasts, we curate exceptional itineraries that blend the allure of historical sites like Carthage and the Medina of Tunis with the sun-soaked beaches of Hammamet and the mystical Sahara Desert.</p>
-                    <p class="mb-4"> Our commitment to personalized service ensures that each traveler embarks on a seamless and memorable exploration of Tunisia, guided by our expertise and a deep appreciation for the country's diverse offerings</p>
+                    <p class="mb-4"> Our commitment to personalized service ensures that each traveler embarks on a seamless and memorable exploration of Tunisia, guided by our expertise and a deep appreciation for the country's diverse offerings.</p>
                     <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
                 </div>
             </div>
